tests/ui/compile-fail/pinned_drop/no_pin_data_but_pinned_drop.stderr
error[E0277]: the trait bound `Foo: HasPinData` is not satisfied
 --> tests/ui/compile-fail/pinned_drop/no_pin_data_but_pinned_drop.rs:7:21
  |
7 | impl PinnedDrop for Foo {
  |                     ^^^ the trait `HasPinData` is not implemented for `Foo`
  |
note: required by a bound in `PinnedDrop`
 --> src/lib.rs
  |
  | pub unsafe trait PinnedDrop: __internal::HasPinData {
  |                              ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PinnedDrop`
